--- a/Brogan_Assignment5_Framework_Databinding/App.config
+++ b/Brogan_Assignment5_Framework_Databinding/App.config
@@ -6,6 +6,9 @@
         <add name="Brogan_Assignment5_Framework_Databinding.Properties.Settings.ProjectDatabaseConnectionString"
             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ProjectDatabase.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="Brogan_Assignment5_Framework_Databinding.Properties.Settings.ProjectDBConnectionString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ProjectDB.mdf;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
